# conferencier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
conferencier/: Cargo.toml  README.md
conferencier-derive/: Cargo.toml  README.md
conferencier-derive/src/: codegen.rs  crate_path.rs  lib.rs  model.rs  parser.rs
conferencier-derive/tests/: trybuild.rs
conferencier-derive/tests/trybuild/: fail_conflicting_attrs.rs  fail_conflicting_attrs.stderr  fail_duplicate_keys.rs  fail_duplicate_keys.stderr  fail_unsupported_type.rs  fail_unsupported_type.stderr  pass_basic.rs
conferencier/examples/: advanced_usage.rs  basic_usage.rs
conferencier/examples/data/: advanced_config.toml
conferencier/src/: confer_module.rs  error.rs  lib.rs  section_guard.rs  store.rs  value_conversion.rs
conferencier/tests/: core_roundtrip.rs  module_integration.rs
docs/: IMPL_001_baseline.md  RFC-0001_baseline_architecture.md  RFC-0002_baseline_examples.md
