[package]
name = "conferencier-derive"
version = "0.0.1"
edition = "2024"
description = "Procedural macro derive for ConferModule"
authors = ["Komix42 <komix@ignore.cz>"]
license = "MIT OR Apache-2.0"
repository = "https://example.com/placeholder"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro-crate = "2"
toml = "0.9"

[dev-dependencies]
conferencier = { path = "../conferencier", default-features = false }
trybuild = "1.0"
