[package]
name = "conferencier-derive"
version = "0.0.3"
edition = "2024"
description = "Procedural macro derive for ConferModule"
authors = ["Komix42 <komix@ignore.cz>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Komix42/conferencier"
readme = "README.md"
keywords = ["proc-macro", "derive", "configuration", "toml"]
categories = ["development-tools::procedural-macro-helpers", "config"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro-crate = "2"
toml = "0.9"

[dev-dependencies]
trybuild = "1.0"
conferencier = { version = "0", path = "../conferencier", default-features = false }
