[package]
name = "conferencier"
version = "0.0.1"
edition = "2024"
description = "Tokio-backed asynchronous shared configuration hub with TOML persistence"
authors = ["Komix42 <komix@ignore.cz>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Komix42/conferencier"
readme = "../README.md"

[features]
default = ["with-derive"]
with-derive = ["conferencier-derive"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.39", features = ["sync", "rt", "rt-multi-thread", "macros", "fs"] }
toml = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
conferencier-derive = { path = "../conferencier-derive", optional = true }

[dev-dependencies]
once_cell = "1.19"
tempfile = "3"
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread"] }
